examples/test/testpolicy4904.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4904
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key19: value44
      key31: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value23
          key47: value44
          key32: value17
      podSelector:
        matchLabels:
          key20: value28
          key34: value17
